--- a/building-server/pom.xml
+++ b/building-server/pom.xml
@@ -18,5 +18,13 @@
         <module>building-manage-impl</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
