--- a/building-server/building-manage-web/src/main/resources/application.properties
+++ b/building-server/building-manage-web/src/main/resources/application.properties
@@ -28,4 +28,16 @@ spring.datasource.druid.min-evictable-idle-time-millis=300000
 spring.datasource.druid.validation-query=SELECT 1
 
 
+# REDIS (RedisProperties)
+spring.redis.database=0
+spring.redis.host=39.108.37.101
+spring.redis.password=yijiayoung@123
+spring.redis.port=6379
+spring.redis.lettuce.pool.max-active=8
+spring.redis.lettuce.pool.max-idle=8
+spring.redis.lettuce.pool.max-wait=-1ms
+spring.redis.lettuce.pool.min-idle=0
+spring.redis.lettuce.shutdown-timeout=100ms
+
+
 
