--- a/building-server/building-manage-web/pom.xml
+++ b/building-server/building-manage-web/pom.xml
@@ -19,7 +19,6 @@
         <java.version>1.8</java.version>
     </properties>
 
-
     <dependencies>
         <dependency>
             <groupId>com.yao</groupId>
@@ -39,8 +38,6 @@
             <version>1.0.29</version>
         </dependency>
 
-
-
         <!-- mysql -->
         <dependency>
             <groupId>mysql</groupId>
@@ -53,6 +50,14 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.9</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.9.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
