--- a/building-server/building-manage-web/pom.xml
+++ b/building-server/building-manage-web/pom.xml
@@ -57,9 +57,29 @@
             <artifactId>aspectjrt</artifactId>
             <version>1.9.2</version>
         </dependency>
-
     </dependencies>
 
+    <!-- 打包环境配置 -->
+    <!--<profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <profileActive>dev</profileActive>
+            </properties>
+            <activation>
+                &lt;!&ndash;指定默认激活&ndash;&gt;
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>prod</id>
+            <properties>
+                <profileActive>prod</profileActive>
+            </properties>
+        </profile>
+    </profiles>-->
+
+    <!-- 打包配置 -->
     <build>
         <finalName>BuildingManager</finalName>
         <plugins>
@@ -77,21 +97,21 @@
         <resources>
             <resource>
                 <directory>src/main/java</directory>
+                <filtering>true</filtering>
                 <includes>
                     <include>**/*.yml</include>
                     <include>**/*.properties</include>
                     <include>**/*.xml</include>
                 </includes>
-                <filtering>false</filtering>
             </resource>
             <resource>
                 <directory>src/main/resources</directory>
+                <filtering>true</filtering>
                 <includes>
-                    <include>**/*.yml</include>
-                    <include>**/*.properties</include>
+                    <!--读取打包命令中指定的环境-->
+                    <include>application.properties</include>
                     <include>**/*.xml</include>
                 </includes>
-                <filtering>false</filtering>
             </resource>
         </resources>
     </build>
